syntax = "proto3";

package tanagra.configschema;

option go_package = "github.com/DataBiosphere/tanagra/criteriaselector/configschemapb";
option java_package = "bio.terra.tanagra.proto.criteriaselector.configschema";
option java_outer_classname = "CFBioVU";

message BioVU {
  bool plasmaFilter = 1;
}
